新增历史统计各页面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,17 +64,17 @@
     <string name="statistic_main_machine_counter">Machine Counter</string>
     <string name="statistic_main_history_data">History</string>
     <string name="statistic_product_top_time">Time</string>
-    <string name="statistic_product_top_press_final">Press Final\n[mm]</string>
-    <string name="statistic_product_top_brew_side">Brew Side</string>
-    <string name="statistic_product_top_grind_time">Grind Time\n[s]</string>
+    <string name="statistic_product_top_press_final">Press\nFinal\n[mm]</string>
+    <string name="statistic_product_top_brew_side">Brew\nSide</string>
+    <string name="statistic_product_top_grind_time">Grind\nTime\n[s]</string>
     <string name="statistic_product_top_pqc">PQC</string>
-    <string name="statistic_product_top_grind_adjust">Grind Adjust</string>
-    <string name="statistic_product_top_ext_time">Ext Time\n[s]</string>
-    <string name="statistic_product_top_water_qnty">Water Quantity\n[tick]</string>
-    <string name="statistic_product_top_water_temp">Water Temp\n[℃]</string>
-    <string name="statistic_product_top_mike_temp">Milk Temp\n[℃]</string>
-    <string name="statistic_product_top_stream_pressure">Steam Pressure\n[bar]</string>
-    <string name="statistic_product_top_product_type">Product Type</string>
+    <string name="statistic_product_top_grind_adjust">Grind\nAdjust</string>
+    <string name="statistic_product_top_ext_time">Ext\nTime\n[s]</string>
+    <string name="statistic_product_top_water_qnty">Water\nQnty\n[tick]</string>
+    <string name="statistic_product_top_water_temp">Water\nTemp\n[℃]</string>
+    <string name="statistic_product_top_mike_temp">Milk\nTemp\n[℃]</string>
+    <string name="statistic_product_top_stream_pressure">Steam\nPressure\n[bar]</string>
+    <string name="statistic_product_top_product_type">Product\nType</string>
     <string name="statistic_product_top_cups">Cups</string>
     <string name="statistic_product_top_operator">Operate Account</string>
     <string name="statistic_product_coffee_counter">Coffee Counter:</string>
