--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -265,5 +265,6 @@
     <string name="display_language">Language</string>
     <string name="display_date_and_time">Date And Time</string>
     <string name="display_screen_style">Screen Style</string>
+    <string name="display_setting_language">Select Language</string>
 
 </resources>
