--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -253,7 +253,7 @@
     <string name="formula_americano_seq">美式咖啡出料顺序</string>
     <string name="formula_americano_seq_c_w">先咖啡后水</string>
     <string name="formula_americano_seq_w_c">先水后咖啡</string>
-    <string name="formula_coffee_cycles">Coffee Cycles</string>
+    <string name="formula_coffee_cycles">连续制作数</string>
     <string name="formula_bypass_dosage">旁路水路出水量</string>
     <string name="formula_font_vat">前方</string>
     <string name="formula_back_vat">后方</string>
