--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="global_warning_title">WARNING</string>
     <string name="global_warning_follow_instruction">Please follow the instructions for regular maintenance.</string>
 
+    <string name="common_empty_string"></string>
     <string name="common_button_confirm">OK</string>
     <string name="common_button_cancel">Cancel</string>
     <string name="common_statistic">Statistic/History</string>
