添加机器统计页面逻辑

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -98,7 +98,7 @@
     <string name="statistic_rinse_top_water_pressure">水压\n[bar]</string>
     <string name="statistic_rinse_top_limit_flow_rate">限流孔水流\n[tick/s]</string>
     <string name="statistic_reset_all">重置数据</string>
-    <string name="statistic_last_reset">上次重置: %s</string>
+    <string name="statistic_last_reset">上次重置时间: %s</string>
     <string name="statistic_left">左</string>
     <string name="statistic_right">右</string>
     <string name="statistic_on">开</string>
