产品统计中文文案调整换行

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -68,17 +68,17 @@
     <string name="statistic_main_machine_counter">机器数据</string>
     <string name="statistic_main_history_data">历史数据</string>
     <string name="statistic_product_top_time">时间</string>
-    <string name="statistic_product_top_press_final">压粉厚度\n[mm]</string>
-    <string name="statistic_product_top_brew_side">制作位置</string>
-    <string name="statistic_product_top_grind_time">研磨时间</string>
+    <string name="statistic_product_top_press_final">压粉\n厚度\n[mm]</string>
+    <string name="statistic_product_top_brew_side">制作\n位置</string>
+    <string name="statistic_product_top_grind_time">研磨\n时间</string>
     <string name="statistic_product_top_pqc">PQC</string>
-    <string name="statistic_product_top_grind_adjust">研磨调整</string>
-    <string name="statistic_product_top_ext_time">萃取时间\n[s]</string>
-    <string name="statistic_product_top_water_qnty">water_qnty\n[tick]</string>
+    <string name="statistic_product_top_grind_adjust">研磨\n调整</string>
+    <string name="statistic_product_top_ext_time">萃取\n时间\n[s]</string>
+    <string name="statistic_product_top_water_qnty">水量\n[tick]</string>
     <string name="statistic_product_top_water_temp">水温\n[℃]</string>
-    <string name="statistic_product_top_mike_temp">牛奶温度\n[℃]</string>
-    <string name="statistic_product_top_stream_pressure">蒸汽压力\n[bar]</string>
-    <string name="statistic_product_top_product_type">产品类型</string>
+    <string name="statistic_product_top_mike_temp">牛奶\n温度\n[℃]</string>
+    <string name="statistic_product_top_stream_pressure">蒸汽\n压力\n[bar]</string>
+    <string name="statistic_product_top_product_type">产品\n类型</string>
     <string name="statistic_product_top_cups">杯数</string>
     <string name="statistic_product_top_operator">操作账号</string>
     <string name="statistic_product_coffee_counter">咖啡杯数:</string>
