--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -67,6 +67,7 @@
     <string name="statistic_main_product_counter">产品杯数</string>
     <string name="statistic_main_machine_counter">机器数据</string>
     <string name="statistic_main_history_data">历史数据</string>
+    <string name="statistic_product_top_date">日期</string>
     <string name="statistic_product_top_time">时间</string>
     <string name="statistic_product_top_press_final">压粉\n厚度\n[mm]</string>
     <string name="statistic_product_top_brew_side">制作\n位置</string>
