--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -315,5 +315,18 @@
     <string name="config_americano_temp_adjust">美式温度自适应</string>
     <string name="config_hot_water_output">热水出口</string>
     <string name="config_steam_wand_position">蒸汽棒位置</string>
+    <string name="config_temp_unit_celsius">°C</string>
+    <string name="config_temp_unit_fahrenheit">°F</string>
+    <string name="config_operation_mode_normal">一般模式</string>
+    <string name="config_operation_mode_self_service">自助运营模式</string>
+    <string name="config_smart_mode_front_hopper">前豆仓</string>
+    <string name="config_smart_mode_back_hopper">后豆仓</string>
+    <string name="config_adjustment_manual">手动</string>
+    <string name="config_adjustment_auto">自动</string>
+    <string name="config_hot_water_output_mid">中间</string>
+    <string name="config_hot_water_output_coffee">咖啡嘴</string>
+    <string name="config_steam_wand_both">两边</string>
+    <string name="config_steam_wand_left">左</string>
+    <string name="config_steam_wand_right">右</string>
 
 </resources>
