--- a/serialport/changelog.txt
+++ b/serialport/changelog.txt
@@ -16,3 +16,6 @@
     2）IO板接收到制作命令会混合返回正在制作命令以及心跳数据，但是制作命令可能存在背心跳数据冲刷情况，需要留意是否存在风险。
     3）应用层应该接收到两种数据，各自响应自身逻辑。如超时未接收到制作命令，提示异常人工介入（后续再补充该部分逻辑）。
 2. 修改锅炉温度从三个id合并为1个id，减少IO板数据大小
+
+2024/11/05
+1. 对MakeDrinkReplay添加id字段，解决多个饮品制作时，应用无法区分IO板响应哪个饮品。
