--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -344,6 +344,26 @@
     <string name="params_steam_boiler_pressure">Steam Boiler Pressure</string>
     <string name="params_ntc_correction_steam_left">NTC Correction Steam Left</string>
     <string name="params_ntc_correction_steam_right">NTC Correction Steam Right</string>
-
+    <string name="params_grounds_drawer_only">Grounds Drawer (0.7kg)</string>
+    <string name="params_grounds_drawer_ignore">Grounds Bin Not Monitored (0.0kg)</string>
+    <string name="params_grounds_drawer_one_kg">Grounds Bin Monitored (1.0kg)</string>
+    <string name="params_grounds_drawer_two_five_kg">Grounds Bin Monitored (2.5kg)</string>
+    <string name="params_grounds_drawer_five_kg">Grounds Bin Monitored (5.0kg)</string>
+    <string name="params_grounds_drawer_seven_five_kg">Grounds Bin Monitored (7.5kg)</string>
+    <string name="params_grounds_drawer_ten_kg">Grounds Bin Monitored (10.0kg)</string>
+    <string name="params_pre_heating_automatic_drawer">Automatic -> Rinse into grounds
+        drawer</string>
+    <string name="params_pre_heating_force_manual_5">Forced manual rinse(5min) ->
+        Rinse through coffee outlet</string>
+    <string name="params_pre_heating_force_manual_10">Forced manual rinse(10min) ->
+        Rinse through coffee outlet</string>
+    <string name="params_pre_heating_manual_reminder_5">Manual rinse reminder(5min) ->
+        Rinse through coffee outlet</string>
+    <string name="params_pre_heating_manual_reminder_10">Manual rinse reminder(10min) ->
+        Rinse through coffee outlet</string>
+    <string name="params_purge_function_grinder_purge">Grinder Purge Product</string>
+    <string name="params_purge_function_etc">Short ETC Calibration</string>
+    <string name="params_screen_rinse_regular">Regular</string>
+    <string name="params_screen_rinse_extra">Extra Flush</string>
 
 </resources>
