--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -267,7 +267,7 @@
     <string name="formula_bypass_dosage">Bypass Dosage</string>
     <string name="formula_foam">Foam</string>
     <string name="formula_milk">Milk</string>
-    <string name="formula_font_vat">Font</string>
+    <string name="formula_front_vat">Front</string>
     <string name="formula_back_vat">Back</string>
     <string name="formula_steam_wand">Steam Wand:</string>
     <string name="formula_steam_boiler">Steam Boiler:</string>
