--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -340,12 +340,13 @@
     <string name="params_steam_boiler_pressure">蒸汽锅炉压力</string>
     <string name="params_ntc_correction_steam_left">左边蒸汽棒温度针温度校正</string>
     <string name="params_ntc_correction_steam_right">右边蒸汽棒温度针温度校正</string>
-    <string name="params_grounds_drawer_ignore">不需要检查(0.0kg)</string>
-    <string name="params_grounds_drawer_one_kg">需要检查(1.0kg)</string>
-    <string name="params_grounds_drawer_two_five_kg">需要检查(2.5kg)</string>
-    <string name="params_grounds_drawer_five_kg">需要检查(5.0kg)</string>
-    <string name="params_grounds_drawer_seven_five_kg">需要检查(7.5kg)</string>
-    <string name="params_grounds_drawer_ten_kg">需要检查(10.0kg)</string>
+    <string name="params_grounds_drawer_only">粉渣盒 (0.7kg)</string>
+    <string name="params_grounds_drawer_ignore">不需要检查粉渣盒</string>
+    <string name="params_grounds_drawer_one_kg">需要检查粉渣盒 (1.0kg)</string>
+    <string name="params_grounds_drawer_two_five_kg">需要检查粉渣盒 (2.5kg)</string>
+    <string name="params_grounds_drawer_five_kg">需要检查粉渣盒 (5.0kg)</string>
+    <string name="params_grounds_drawer_seven_five_kg">需要检查粉渣盒 (7.5kg)</string>
+    <string name="params_grounds_drawer_ten_kg">需要检查粉渣盒 (10.0kg)</string>
     <string name="params_pre_heating_automatic_drawer">自动 -> 冲水到粉渣盒</string>
     <string name="params_pre_heating_force_manual_5">强制手动冲水(5分钟) -> 冲水到咖啡出口</string>
     <string name="params_pre_heating_force_manual_10">强制手动冲水(10分钟) -> 冲水到咖啡出口</string>
