--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -366,4 +366,14 @@
     <string name="params_screen_rinse_regular">Regular</string>
     <string name="params_screen_rinse_extra">Extra Flush</string>
 
+    <string name="bean_hopper_rear_name">Name Bean Hopper Rear</string>
+    <string name="bean_hopper_front_name">Name Bean Hopper front</string>
+    <string name="bean_powder_quantity_control">Powder Quantity Control</string>
+    <string name="bean_grinding_capacity_hopper_rear">Grinding Capacity Bean Hopper Rear</string>
+    <string name="bean_grinding_capacity_hopper_front">Grinding Capacity Bean Hopper Front</string>
+    <string name="bean_extraction_time_control_rear">Extraction Time Control Rear</string>
+    <string name="bean_extraction_time_control_front">Extraction Time Control Front</string>
+    <string name="bean_levelling">Levelling</string>
+    <string name="bean_grinder_setting">Grinder Setting</string>
+
 </resources>
