--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="error_command_no_reply">Common No Reply</string>
 
     <string name="error_front_bean_container_empty">Front Bean Container Empty</string>
-    <string name="error_back_bean_container_empty">Back Bean Container Empty</string>
+    <string name="error_back_bean_container_empty">Rear Bean Container Empty</string>
     <string name="error_bean_container_empty">Bean Container Empty</string>
     <string name="error_left_grinder_error">Left Grinder Error</string>
     <string name="error_right_grinder_error">Right Grinder Error</string>
@@ -268,7 +268,7 @@
     <string name="formula_foam">Foam</string>
     <string name="formula_milk">Milk</string>
     <string name="formula_front_vat">Front</string>
-    <string name="formula_back_vat">Back</string>
+    <string name="formula_back_vat">Rear</string>
     <string name="formula_steam_wand">Steam Wand:</string>
     <string name="formula_steam_boiler">Steam Boiler:</string>
     <string name="formula_change_product_name">Enter Product Name</string>
@@ -324,7 +324,7 @@
     <string name="config_operation_mode_normal">Normal</string>
     <string name="config_operation_mode_self_service">Self Service</string>
     <string name="config_smart_mode_front_hopper">Only Front Hopper</string>
-    <string name="config_smart_mode_back_hopper">Only Back Hopper</string>
+    <string name="config_smart_mode_back_hopper">Only Rear Hopper</string>
     <string name="config_adjustment_manual">Manual</string>
     <string name="config_adjustment_auto">Auto</string>
     <string name="config_hot_water_output_mid">Middle</string>
